Bug 256615 - KMenuEdit uses Win2k-like frame for menu tree
Summary: KMenuEdit uses Win2k-like frame for menu tree
Status: RESOLVED FIXED
Alias: None
Product: kmenuedit
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR minor
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-11 16:24 UTC by Nikita Churaev
Modified: 2010-11-11 21:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Churaev 2010-11-11 16:24:57 UTC
Version:           unspecified (using KDE 4.5.3) 
OS:                Linux

It's ugly, should use nice Oxygen frame.

Reproducible: Always
Comment 1 Christoph Feck 2010-11-11 21:03:07 UTC
SVN commit 1195703 by cfeck:

Use standard frame

BUG: 256615
FIXED-IN: 4.6.0


 M  +0 -1      treeview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1195703