Use standard frame

BUG: 256615
FIXED-IN: 4.6.0

svn path=/trunk/KDE/kdebase/workspace/; revision=1195703